// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressFab renders component 1`] = `
<div
  className="makeStyles-wrapper-3"
>
  <WithStyles(ForwardRef(Fab))
    classes={
      Object {
        "root": "makeStyles-root-1",
      }
    }
    disabled={false}
    onClick={[MockFunction]}
  >
    <Icon />
  </WithStyles(ForwardRef(Fab))>
</div>
`;

exports[`ProgressFab renders disabled 1`] = `
<div
  className="makeStyles-wrapper-3"
>
  <WithStyles(ForwardRef(Fab))
    classes={
      Object {
        "root": "makeStyles-root-1 makeStyles-buttonSuccess-4",
      }
    }
    disabled={true}
    onClick={[MockFunction]}
  >
    <CheckIcon />
  </WithStyles(ForwardRef(Fab))>
</div>
`;

exports[`ProgressFab renders loading 1`] = `
<div
  className="makeStyles-wrapper-3"
>
  <WithStyles(ForwardRef(Fab))
    classes={
      Object {
        "root": "makeStyles-root-1",
      }
    }
    disabled={false}
    onClick={[MockFunction]}
  >
    <Icon />
  </WithStyles(ForwardRef(Fab))>
  <WithStyles(ForwardRef(CircularProgress))
    className="makeStyles-fabProgress-2"
    size={68}
  />
</div>
`;

exports[`ProgressFab renders success 1`] = `
<div
  className="makeStyles-wrapper-3"
>
  <WithStyles(ForwardRef(Fab))
    classes={
      Object {
        "root": "makeStyles-root-1 makeStyles-buttonSuccess-4",
      }
    }
    disabled={false}
    onClick={[MockFunction]}
  >
    <CheckIcon />
  </WithStyles(ForwardRef(Fab))>
</div>
`;
